sample/asm/errors/no_return_at_the_end_of_a_function.asm
.function: foo/0
    print (strstore 1 "Hello World!")
.end

.function: main/1
    izero 0
    return
.end
